--- a/css/styles.css
+++ b/css/styles.css
@@ -14,7 +14,7 @@ body {
 }
 
 main {
-  background-image: url(../images/hero-image.png);
+  background-image: url(../images/hero-image.webp);
   background-position: 50%;
   background-size: cover;
   /* min-height: inherit; */
